cmake_minimum_required(VERSION 3.16)

add_library(hl++
  hashlibpp.h
  hl_md5.cpp
  hl_md5.h
  hl_md5wrapper.cpp
  hl_md5wrapper.h
  hl_sha1.cpp
  hl_sha1.h
  hl_sha1wrapper.cpp
  hl_sha1wrapper.h
  hl_sha256.cpp
  hl_sha256.h
  hl_sha256wrapper.cpp
  hl_sha256wrapper.h
  hl_sha2ext.cpp
  hl_sha2ext.h
  hl_sha384wrapper.cpp
  hl_sha512wrapper.cpp
  hl_wrapperfactory.cpp
  hl_wrapperfactory.h
  hl_exception.h
  hl_hashwrapper.h
  hl_sha2mac.h
  hl_sha384wrapper.h
  hl_sha512wrapper.h
  hl_types.h
  )

add_library(hl++::hl++ ALIAS hl++)
target_include_directories(hl++
  PUBLIC
  ${PROJECT_SOURCE_DIR}/src
  )

# Install library
install(TARGETS hl++ EXPORT hl++Targets
  LIBRARY DESTINATION lib
  INCLUDES DESTINATION include
  )

# Install header files
install(FILES
  ${PROJECT_SOURCE_DIR}/src/hl_hashwrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_wrapperfactory.h
  ${PROJECT_SOURCE_DIR}/src/hl_exception.h
  ${PROJECT_SOURCE_DIR}/src/hl_md5.h
  ${PROJECT_SOURCE_DIR}/src/hl_md5wrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha1.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha1wrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha2mac.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha256.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha256wrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha2ext.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha384wrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_sha512wrapper.h
  ${PROJECT_SOURCE_DIR}/src/hl_types.h
  ${PROJECT_SOURCE_DIR}/src/hashlibpp.h
  DESTINATION include
  )
